--- a/Threadlock/Threadlock.csproj
+++ b/Threadlock/Threadlock.csproj
@@ -31,6 +31,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="Content\Audio\Music\melting idols.ogg" />
+    <None Remove="Content\Data\DungeonFlows2.json" />
     <None Remove="Content\Effects\JitterDestroyer.fx" />
     <None Remove="Content\Textures\Characters\ChainBot\attack.png" />
     <None Remove="Content\Textures\Characters\ChainBot\charge.png" />
