--- a/Threadlock/Threadlock.csproj
+++ b/Threadlock/Threadlock.csproj
@@ -35,6 +35,7 @@
     <None Remove="Content\Data\DungeonFlows3.json" />
     <None Remove="Content\Data\DungeonFlows4.json" />
     <None Remove="Content\Data\SimpleLoop.json" />
+    <None Remove="Content\Data\SingleRoom.json" />
     <None Remove="Content\Effects\JitterDestroyer.fx" />
     <None Remove="Content\Textures\Characters\ChainBot\attack.png" />
     <None Remove="Content\Textures\Characters\ChainBot\charge.png" />
