--- a/Threadlock/Threadlock.csproj
+++ b/Threadlock/Threadlock.csproj
@@ -83,6 +83,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\Textures\Decorations\Forge\Atlas\" />
+    <Folder Include="Content\Textures\Drops\" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
