--- a/Threadlock/Threadlock.csproj
+++ b/Threadlock/Threadlock.csproj
@@ -65,6 +65,7 @@
     <None Remove="Content\Textures\Characters\Player\player_gun_projectile.png" />
     <None Remove="Content\Textures\Characters\Player\sci_fi_player_no_sword.png" />
     <None Remove="Content\Textures\Characters\Player\sci_fi_player_with_sword.png" />
+    <None Remove="Content\Textures\Drops\Collectables-Sheet.png" />
     <None Remove="Content\Textures\Tilesets\dungeon_prison_props.png" />
     <None Remove="Content\Textures\Tilesets\dungeon_prison_tileset.png" />
     <None Remove="Content\Textures\Tilesets\forge_tileset.png" />
@@ -101,7 +102,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\Textures\Decorations\Forge\Atlas\" />
-    <Folder Include="Content\Textures\Drops\" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
