--- a/Threadlock/Threadlock.csproj
+++ b/Threadlock/Threadlock.csproj
@@ -73,6 +73,7 @@
     <None Remove="Content\Textures\Tilesets\prototype_tileset.png" />
     <None Remove="Content\Textures\UI\Border All 10.png" />
     <None Remove="Content\Textures\UI\crosshair038.png" />
+    <None Remove="Content\Textures\UI\cursed tyler small.png" />
     <None Remove="Content\Textures\UI\progressBar.png" />
     <None Remove="Content\Textures\UI\progressBarGlow.png" />
     <None Remove="Content\Tiled\Tilesets\forge_tileset.tsx" />
