--- a/Threadlock/Threadlock.csproj
+++ b/Threadlock/Threadlock.csproj
@@ -42,6 +42,8 @@
     <None Remove="Content\Audio\Sounds\dust_pickup.wav" />
     <None Remove="Content\Audio\Sounds\Fart With Reverb.wav" />
     <None Remove="Content\Audio\Sounds\Retro Alarmed 06.wav" />
+    <None Remove="Content\Audio\Sounds\Socket_Equip.wav" />
+    <None Remove="Content\Audio\Sounds\Socket_Remove.wav" />
     <None Remove="Content\CompiledEffects\SpriteOutline.fxb" />
     <None Remove="Content\Data\DungeonFlows2.json" />
     <None Remove="Content\Data\DungeonFlows3.json" />
