shop sort of implemented

--- a/Threadlock/Threadlock.csproj
+++ b/Threadlock/Threadlock.csproj
@@ -35,6 +35,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="Content\Audio\Music\melting idols.ogg" />
+    <None Remove="Content\Audio\Music\shweet_sales.ogg" />
     <None Remove="Content\Audio\Music\the_bay.ogg" />
     <None Remove="Content\Audio\Sounds\22_Slash_04.wav" />
     <None Remove="Content\Audio\Sounds\23_Slash_05.wav" />
