--- a/Threadlock/Content/Data/Areas.json
+++ b/Threadlock/Content/Data/Areas.json
@@ -1,6 +1,6 @@
 [
   {
     "Name": "Forge",
-    "EnemyTypes": ["ChainBot", "Ghoul", "OrbMage", "Spitter"]
+    "EnemyTypes": ["ChainBot", "Ghoul", "OrbMage", "Spitter", "Assassin"]
   }
 ]
