added lute hammer

--- a/Threadlock/Threadlock.csproj
+++ b/Threadlock/Threadlock.csproj
@@ -41,9 +41,19 @@
     <None Remove="Content\Audio\Sounds\21_Slash_03.wav" />
     <None Remove="Content\Audio\Sounds\22_Slash_04.wav" />
     <None Remove="Content\Audio\Sounds\23_Slash_05.wav" />
+    <None Remove="Content\Audio\Sounds\60_Special_move_02.wav" />
     <None Remove="Content\Audio\Sounds\8d82b5_doom_shotgun_firing_sound_effect.mp3" />
     <None Remove="Content\Audio\Sounds\dust_pickup.wav" />
     <None Remove="Content\Audio\Sounds\Fart With Reverb.wav" />
+    <None Remove="Content\Audio\Sounds\lute_sound-01.wav" />
+    <None Remove="Content\Audio\Sounds\lute_sound-02.wav" />
+    <None Remove="Content\Audio\Sounds\lute_sound-03.wav" />
+    <None Remove="Content\Audio\Sounds\lute_sound-04.wav" />
+    <None Remove="Content\Audio\Sounds\lute_sound-05.wav" />
+    <None Remove="Content\Audio\Sounds\lute_sound-06.wav" />
+    <None Remove="Content\Audio\Sounds\lute_sound-07.wav" />
+    <None Remove="Content\Audio\Sounds\lute_sound-08.wav" />
+    <None Remove="Content\Audio\Sounds\lute_sound-09.wav" />
     <None Remove="Content\Audio\Sounds\Retro Alarmed 06.wav" />
     <None Remove="Content\Audio\Sounds\Socket_Equip.wav" />
     <None Remove="Content\Audio\Sounds\Socket_Remove.wav" />
