--- a/Threadlock/Threadlock.csproj
+++ b/Threadlock/Threadlock.csproj
@@ -71,6 +71,8 @@
     <None Remove="Content\Data\FairyForestTiles.json" />
     <None Remove="Content\Data\FairyForestTiles2.json" />
     <None Remove="Content\Data\PlayerActions.json" />
+    <None Remove="Content\Data\PlayerWeaponAttacks.json" />
+    <None Remove="Content\Data\PlayerWeapons.json" />
     <None Remove="Content\Data\Projectiles.json" />
     <None Remove="Content\Data\SimpleLoop.json" />
     <None Remove="Content\Data\SingleRoom.json" />
