--- a/Threadlock/Content/Data/Projectiles.json
+++ b/Threadlock/Content/Data/Projectiles.json
@@ -5,7 +5,14 @@
 
     "Damage": 1,
 
+    "PhysicsLayers": [ "PlayerHitbox" ],
     "AffectsEnemies": true,
+    "HitEffects": [
+      {
+        "Layers": [ "Environment" ],
+        "Type": "Sound"
+      }
+    ],
 
     "AttachToOwner": true,
 
@@ -50,6 +57,7 @@
 
     "Damage": 3,
 
+    "PhysicsLayers": [ "PlayerHitbox" ],
     "AffectsEnemies": true,
 
     "Points": [
@@ -74,6 +82,7 @@
     "HitVfx": [ "HitEffect_Lightning_1", "HitEffect_Lightning_2" ],
     "HitEffects": [
       {
+        "RequiresDamage": true,
         "Type": "Chain",
         "Radius": 75,
         "MaxChains": 3,
@@ -84,14 +93,89 @@
       }
     ]
   },
+  {
+    "Name": "Player_LuteNote",
+    "Type": "Straight",
+
+    "Damage": 1,
+    "Lifespan": 10,
+
+    "PhysicsLayers": [ "PlayerHitbox" ],
+    "AffectsEnemies": true,
+
+    "Radius": 24,
+
+    "Speed": 50,
+    "InitialSpeed": 450,
+    "TimeToFinalSpeed": 0.4,
+    "EaseType": "CubicOut",
+
+    "Animation": "SpitterProjectileTravel",
+    "DestroyAnimations": [ "SpitterProjectileBurst1", "SpitterProjectileBurst2" ],
+
+    "HitEffects": [
+      {
+        "Type": "Destroy",
+        "NextProjectile": "Player_LuteNoteExplosion",
+        "Sounds": [
+          "Content/Audio/Sounds/lute explosion sounds-01.wav",
+          "Content/Audio/Sounds/lute explosion sounds-02.wav",
+          "Content/Audio/Sounds/lute explosion sounds-03.wav",
+          "Content/Audio/Sounds/lute explosion sounds-04.wav",
+          "Content/Audio/Sounds/lute explosion sounds-05.wav",
+          "Content/Audio/Sounds/lute explosion sounds-06.wav",
+          "Content/Audio/Sounds/lute explosion sounds-07.wav",
+          "Content/Audio/Sounds/lute explosion sounds-08.wav",
+          "Content/Audio/Sounds/lute explosion sounds-09.wav"
+        ],
+        "Layers": ["LuteNoteExplosion"]
+      }
+    ]
+  },
+  {
+    "Name": "Player_LuteSlam",
+    "Type": "Instant",
+
+    "Damage": 3,
+
+    "PhysicsLayers": [ "PlayerHitbox", "LuteNoteExplosion" ],
+    "AffectsEnemies": true,
+
+    "Radius": 15,
+    "AttachToOwner": true,
+
+    "ShouldRotate": true,
+    "Lifespan": 1,
+    "HitboxActiveDuration": 0.1
+  },
+  {
+    "Name": "Player_LuteNoteExplosion",
+    "Type": "Explosion",
+
+    "Damage": 2,
+
+    "PhysicsLayers": [ "PlayerHitbox", "LuteNoteExplosion" ],
+    "AffectsEnemies": true,
+
+    "Radius": 0,
+
+    "Lifespan": 0.15,
+
+    "ExplosionTime": 0.15,
+    "EaseType": "Linear",
+    "InitialRadius": 0,
+    "FinalRadius": 42
+  },
 
   {
     "Name": "Ghoul_Swipe",
     "Type": "Instant",
 
+    "AffectsPlayer": true,
+
     "Damage": 1,
     "Lifespan": 0.1,
-    "AffectsPlayer": true,
+    "PhysicsLayers": [ "EnemyHitbox" ],
 
     "Radius": 8
   },
@@ -102,8 +186,11 @@
 
     "Damage": 1,
     "Lifespan": 10,
+
+    "PhysicsLayers": [ "EnemyHitbox" ],
     "AffectsPlayer": true,
     "DestroyOnWalls": true,
+    "DestroyOnHit": true,
 
     "Radius": 3,
 
@@ -117,6 +204,7 @@
     "Type": "Instant",
 
     "Damage": 2,
+    "PhysicsLayers": [ "EnemyHitbox" ],
     "AffectsPlayer": true,
 
     "Points": [
@@ -147,6 +235,7 @@
     "Type": "Instant",
 
     "Damage": 2,
+    "PhysicsLayers": [ "EnemyHitbox" ],
     "AffectsPlayer": true,
 
     "Points": [
@@ -181,6 +270,7 @@
     "Type": "Instant",
 
     "Damage": 2,
+    "PhysicsLayers": [ "EnemyHitbox" ],
     "AffectsPlayer": true,
 
     "ShouldRotate": true,
@@ -213,6 +303,7 @@
     "Type": "Instant",
 
     "Damage": 1,
+    "PhysicsLayers": [ "EnemyHitbox" ],
     "AffectsPlayer": true,
 
     "AttachToOwner": true,
@@ -229,6 +320,7 @@
     "Type": "Instant",
 
     "Damage": 3,
+    "PhysicsLayers": [ "EnemyHitbox" ],
     "AffectsPlayer": true,
 
     "ShouldRotate": true,
@@ -243,6 +335,7 @@
     "Type": "Instant",
 
     "Damage": 3,
+    "PhysicsLayers": [ "EnemyHitbox" ],
     "AffectsPlayer": true,
 
     "AttachToOwner": true,
